--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "next": "latest",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-html-parser": "^2.0.2",
     "tailwindcss": "^3.3.2"
   }
 }
